--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@
 <div class="section" id="featured">
     <h2>Featured Video</h2>
 
-    <!-- PALITAN MO ANG VIDEO_ID -->
-    <iframe src="https://www.youtube.com/embed/VIDEO_ID"
+    <iframe src="https://www.youtube.com/embed/ISUwfFAL8lg"
         frameborder="0"
         allowfullscreen>
     </iframe>
+
 </div>
 
 <footer>
