--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-            background: url('background.jpg') no-repeat center center fixed;
-            background-size: cover;
+            background-color: black;
             color: white;
             overflow-x: hidden;
         }
 
-        /* INTRO SCREEN */
+        /* INTRO */
         #intro {
             position: fixed;
             width: 100%;
@@ -25,13 +24,13 @@
             align-items: center;
             z-index: 2000;
             animation: fadeOut 3s forwards;
-            animation-delay: 3s;
+            animation-delay: 2.5s;
         }
 
         #intro h1 {
             color: red;
-            font-size: 70px;
-            letter-spacing: 5px;
+            font-size: 80px;
+            letter-spacing: 8px;
             animation: zoomIn 2s ease-in-out;
         }
 
@@ -48,40 +47,44 @@
             position: fixed;
             width: 100%;
             top: 0;
-            background-color: rgba(0,0,0,0.85);
+            background: rgba(0,0,0,0.85);
             padding: 15px 30px;
             font-size: 26px;
             font-weight: bold;
             color: red;
-            letter-spacing: 2px;
+            letter-spacing: 3px;
             z-index: 1000;
         }
 
+        /* HERO SECTION WITH IMAGE */
         .hero {
             height: 100vh;
+            background: linear-gradient(to bottom, rgba(0,0,0,0.7), rgba(0,0,0,0.9)),
+                        url('bhenzflix-bg.jpg') no-repeat center center;
+            background-size: cover;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            background-color: rgba(0,0,0,0.6);
             text-align: center;
             padding: 20px;
         }
 
         .hero h1 {
             font-size: 60px;
-            margin: 0;
+            margin-bottom: 10px;
+            text-shadow: 0 0 20px red;
         }
 
         .hero p {
             font-size: 22px;
-            margin: 20px 0;
+            margin-bottom: 20px;
         }
 
         .btn {
-            padding: 15px 30px;
+            padding: 15px 35px;
             font-size: 18px;
-            background-color: red;
+            background: red;
             border: none;
             border-radius: 5px;
             color: white;
@@ -90,26 +93,26 @@
         }
 
         .btn:hover {
-            background-color: darkred;
-            transform: scale(1.05);
+            background: darkred;
+            transform: scale(1.1);
         }
 
         .section {
-            padding: 80px 30px;
-            background-color: rgba(0,0,0,0.8);
+            padding: 60px 20px;
+            background: black;
         }
 
         iframe {
             width: 100%;
             height: 500px;
             border-radius: 10px;
-            margin-top: 20px;
+            box-shadow: 0 0 30px red;
         }
 
         footer {
             text-align: center;
             padding: 20px;
-            background-color: black;
+            background: black;
             font-size: 14px;
             color: gray;
         }
@@ -118,7 +121,6 @@
 
 <body>
 
-<!-- INTRO -->
 <div id="intro">
     <h1>BHENZFLIX</h1>
 </div>
@@ -129,20 +131,21 @@
 
 <div class="hero">
     <h1>Welcome to BhenzFlix</h1>
-    <p>Stream Your Original Videos Anytime</p>
-    <button class="btn" onclick="document.getElementById('featured').scrollIntoView({behavior:'smooth'})">
+    <p>Experience Cinematic Streaming</p>
+    <button class="btn" onclick="document.getElementById('video').scrollIntoView({behavior:'smooth'})">
         Watch Now
     </button>
 </div>
 
-<div class="section" id="featured">
+<div class="section" id="video">
     <h2>Featured Video</h2>
 
-    <iframe src="https://www.youtube.com/embed/ISUwfFAL8lg"
+    <iframe 
+        src="https://www.youtube.com/embed/ISUwfFAL8lg?autoplay=1&mute=1&controls=1&modestbranding=1&rel=0"
         frameborder="0"
+        allow="autoplay"
         allowfullscreen>
     </iframe>
-
 </div>
 
 <footer>
