--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>BhenzFlix</title>
+    <title>BhenzFlix Cinema</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <style>
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-            background-color: black;
+            background: black;
             color: white;
-            overflow-x: hidden;
+            overflow: hidden;
         }
 
-        /* INTRO */
+        /* INTRO SCREEN */
         #intro {
             position: fixed;
             width: 100%;
@@ -22,15 +22,16 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            z-index: 2000;
+            z-index: 3000;
             animation: fadeOut 3s forwards;
-            animation-delay: 2.5s;
+            animation-delay: 3s;
         }
 
         #intro h1 {
             color: red;
             font-size: 80px;
-            letter-spacing: 8px;
+            letter-spacing: 10px;
+            text-shadow: 0 0 40px red;
             animation: zoomIn 2s ease-in-out;
         }
 
@@ -43,113 +44,113 @@
             to { opacity: 0; visibility: hidden; }
         }
 
+        /* CURTAIN EFFECT */
+        .curtain {
+            position: fixed;
+            width: 50%;
+            height: 100vh;
+            background: linear-gradient(to bottom, #800000, #300000);
+            z-index: 2000;
+            top: 0;
+        }
+
+        .left {
+            left: 0;
+            animation: openLeft 3s forwards;
+            animation-delay: 3s;
+        }
+
+        .right {
+            right: 0;
+            animation: openRight 3s forwards;
+            animation-delay: 3s;
+        }
+
+        @keyframes openLeft {
+            to { transform: translateX(-100%); }
+        }
+
+        @keyframes openRight {
+            to { transform: translateX(100%); }
+        }
+
         header {
             position: fixed;
             width: 100%;
             top: 0;
-            background: rgba(0,0,0,0.85);
-            padding: 15px 30px;
-            font-size: 26px;
+            padding: 15px;
+            text-align: center;
+            font-size: 28px;
             font-weight: bold;
             color: red;
-            letter-spacing: 3px;
+            letter-spacing: 5px;
+            background: rgba(0,0,0,0.8);
             z-index: 1000;
         }
 
-        /* HERO SECTION WITH IMAGE */
         .hero {
             height: 100vh;
-            background: linear-gradient(to bottom, rgba(0,0,0,0.7), rgba(0,0,0,0.9)),
-                        url('bhenzflix-bg.jpg') no-repeat center center;
-            background-size: cover;
             display: flex;
-            flex-direction: column;
             justify-content: center;
             align-items: center;
             text-align: center;
+            flex-direction: column;
             padding: 20px;
+            background: radial-gradient(circle, #1a0000 0%, black 70%);
         }
 
         .hero h1 {
             font-size: 60px;
-            margin-bottom: 10px;
-            text-shadow: 0 0 20px red;
-        }
-
-        .hero p {
-            font-size: 22px;
-            margin-bottom: 20px;
-        }
-
-        .btn {
-            padding: 15px 35px;
-            font-size: 18px;
-            background: red;
-            border: none;
-            border-radius: 5px;
-            color: white;
-            cursor: pointer;
-            transition: 0.3s;
-        }
-
-        .btn:hover {
-            background: darkred;
-            transform: scale(1.1);
-        }
-
-        .section {
-            padding: 60px 20px;
-            background: black;
+            text-shadow: 0 0 25px red;
         }
 
         iframe {
             width: 100%;
             height: 500px;
-            border-radius: 10px;
-            box-shadow: 0 0 30px red;
+            border: none;
+            box-shadow: 0 0 40px red;
         }
 
         footer {
             text-align: center;
-            padding: 20px;
+            padding: 15px;
             background: black;
-            font-size: 14px;
             color: gray;
+        }
+
+        .content {
+            padding-top: 100px;
         }
     </style>
 </head>
 
 <body>
 
+<!-- INTRO -->
 <div id="intro">
     <h1>BHENZFLIX</h1>
 </div>
 
+<!-- CURTAINS -->
+<div class="curtain left"></div>
+<div class="curtain right"></div>
+
 <header>
-    🎬 BHENZFLIX
+    🎬 BHENZFLIX CINEMA
 </header>
 
-<div class="hero">
-    <h1>Welcome to BhenzFlix</h1>
-    <p>Experience Cinematic Streaming</p>
-    <button class="btn" onclick="document.getElementById('video').scrollIntoView({behavior:'smooth'})">
-        Watch Now
-    </button>
-</div>
-
-<div class="section" id="video">
-    <h2>Featured Video</h2>
+<div class="hero content">
+    <h1>Now Showing</h1>
 
     <iframe 
         src="https://www.youtube.com/embed/ISUwfFAL8lg?autoplay=1&mute=1&controls=1&modestbranding=1&rel=0"
-        frameborder="0"
         allow="autoplay"
         allowfullscreen>
     </iframe>
 </div>
 
 <footer>
-    © 2026 BhenzFlix. All rights reserved.
+    © 2026 BhenzFlix Cinema Experience
 </footer>
 
 </body>
