--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         header {
             padding: 25px;
-            font-size: 32px;
+            font-size: 30px;
             font-weight: bold;
             color: red;
             letter-spacing: 6px;
@@ -23,21 +23,7 @@
         }
 
         .container {
-            margin-top: 80px;
-        }
-
-        .cover {
-            width: 250px;
-            height: 250px;
-            background: linear-gradient(45deg, red, black);
-            margin: auto;
-            border-radius: 15px;
-            box-shadow: 0 0 40px red;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 20px;
-            font-weight: bold;
+            margin-top: 100px;
         }
 
         audio {
@@ -54,12 +40,6 @@
             color: white;
             cursor: pointer;
             font-size: 16px;
-            transition: 0.3s;
-        }
-
-        .btn:hover {
-            background: darkred;
-            transform: scale(1.05);
         }
 
         footer {
@@ -80,20 +60,12 @@
 
 <div class="container">
 
-    <div class="cover">
-        NOW PLAYING
-    </div>
+    <h2>Now Playing</h2>
 
-    <h2>SIGE LANG KAPATID</h2>
-
-    <audio id="audioPlayer" controls>
+    <audio controls>
         <source src="song.mp3" type="audio/mpeg">
         Your browser does not support audio.
     </audio>
-
-    <br>
-    <button class="btn" onclick="document.getElementById('audioPlayer').play()">▶ Play</button>
-    <button class="btn" onclick="document.getElementById('audioPlayer').pause()">⏸ Pause</button>
 
 </div>
 
