--- a/index.html
+++ b/index.html
@@ -23,29 +23,63 @@
         }
 
         .container{
-            margin-top:80px;
+            margin-top:40px;
+            padding:20px;
         }
 
-        .cover{
-            width:250px;
-            height:250px;
-            background:linear-gradient(45deg, red, black);
-            margin:auto;
-            border-radius:15px;
-            box-shadow:0 0 40px red;
-            display:flex;
-            align-items:center;
-            justify-content:center;
-            font-weight:bold;
+        h2{
+            margin-bottom:20px;
         }
 
         audio{
             width:90%;
+            margin-top:20px;
+        }
+
+        .controls{
+            margin-top:15px;
+        }
+
+        .btn{
+            padding:10px 20px;
+            margin:5px;
+            background:red;
+            border:none;
+            color:white;
+            border-radius:5px;
+            cursor:pointer;
+        }
+
+        .btn:hover{
+            background:darkred;
+        }
+
+        .playlist{
             margin-top:30px;
+            max-width:400px;
+            margin-left:auto;
+            margin-right:auto;
+        }
+
+        .song{
+            padding:12px;
+            margin:8px 0;
+            background:#111;
+            border-radius:5px;
+            cursor:pointer;
+            transition:0.3s;
+        }
+
+        .song:hover{
+            background:red;
+        }
+
+        .active{
+            background:darkred !important;
         }
 
         footer{
-            margin-top:60px;
+            margin-top:50px;
             padding:20px;
             background:black;
             color:gray;
@@ -56,28 +90,94 @@
 
 <body>
 
-<header>
-    🎵 BHENZFLIX MUSIC
-</header>
+<header>🎵 BHENZFLIX MUSIC</header>
 
 <div class="container">
 
-    <div class="cover">
-        NOW PLAYING
+    <h2 id="nowTitle">Now Playing</h2>
+
+    <audio id="player" controls></audio>
+
+    <div class="controls">
+        <button class="btn" onclick="prevSong()">⏮ Previous</button>
+        <button class="btn" onclick="nextSong()">⏭ Next</button>
     </div>
 
-    <h2>A Boy Brushed Red Living In Black And White</h2>
-
-    <audio controls>
-        <source src="https://www.dropbox.com/scl/fi/wd55ka3u46l7g0o5xql29/A-Boy-Brushed-Red-Living-In-Black-And-White-Underoath-320K.mp3?rlkey=0acevs2ty266wxofuiubb3oxu&st=7tso2i3s&raw=1" type="audio/mpeg">
-        Your browser does not support audio.
-    </audio>
+    <div class="playlist" id="playlist"></div>
 
 </div>
 
 <footer>
     © 2026 BhenzFlix Music Player
 </footer>
+
+<script>
+var songs = [
+{
+    title: "A Boy Brushed Red Living In Black And White",
+    file: "https://www.dropbox.com/scl/fi/wd55ka3u46l7g0o5xql29/A-Boy-Brushed-Red-Living-In-Black-And-White-Underoath-320K.mp3?rlkey=0acevs2ty266wxofuiubb3oxu&st=7tso2i3s&raw=1"
+},
+{
+    title: "Crossroads",
+    file: "ILAGAY_MO_DITO_2ND_DROPBOX_LINK"
+},
+{
+    title: "4:00 AM",
+    file: "ILAGAY_MO_DITO_3RD_DROPBOX_LINK"
+}
+];
+
+var currentIndex = 0;
+var player = document.getElementById("player");
+var nowTitle = document.getElementById("nowTitle");
+var playlistDiv = document.getElementById("playlist");
+
+function loadPlaylist(){
+    songs.forEach(function(song, index){
+        var div = document.createElement("div");
+        div.className = "song";
+        div.innerText = "🎶 " + song.title;
+        div.onclick = function(){
+            currentIndex = index;
+            playSong();
+        };
+        playlistDiv.appendChild(div);
+    });
+}
+
+function playSong(){
+    player.src = songs[currentIndex].file;
+    nowTitle.innerText = "Now Playing: " + songs[currentIndex].title;
+    player.play();
+    updateActive();
+}
+
+function nextSong(){
+    currentIndex++;
+    if(currentIndex >= songs.length){
+        currentIndex = 0;
+    }
+    playSong();
+}
+
+function prevSong(){
+    currentIndex--;
+    if(currentIndex < 0){
+        currentIndex = songs.length - 1;
+    }
+    playSong();
+}
+
+function updateActive(){
+    var items = document.querySelectorAll(".song");
+    items.forEach(item => item.classList.remove("active"));
+    items[currentIndex].classList.add("active");
+}
+
+player.addEventListener("ended", nextSong);
+
+loadPlaylist();
+</script>
 
 </body>
 </html>
